--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
-    "@uidsign/scroll-animation": "0.1.1",
-    "ng-circle-progress": "^1.6.0",
+    "@types/aos": "^3.0.4",
+    "aos": "^2.3.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
