--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -32,10 +32,16 @@
             ],
             "styles": [
               "src/styles.scss",
-              "./node_modules/aos/dist/aos.css"
+              "./node_modules/aos/dist/aos.css",
+              "./node_modules/primeicons/primeicons.css",
+              "./node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "./node_modules/primeng/resources/primeng.min.css",
+              "./node_modules/quill/dist/quill.core.css",
+              "./node_modules/quill/dist/quill.snow.css"
             ],
             "scripts": [
-              "./node_modules/aos/dist/aos.js"
+              "./node_modules/aos/dist/aos.js",
+              "./node_modules/quill/dist/quill.js"
             ]
           },
           "configurations": {
