--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^12.2.16",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@auth0/angular-jwt": "^5.0.2",
     "@types/aos": "^3.0.4",
+    "angular-particle": "^1.0.4",
     "aos": "^2.3.4",
     "primeicons": "^5.0.0",
     "primeng": "^13.4.1",
